# resume-maker

backend/: .gitignore  API_DOCS.md  Dockerfile  KNOWLEDGE_GRAPH_SCHEMA.md  README.md  claude.md  main.py  pyproject.toml  run.sh
backend/app/: main.py  models.py
backend/app/ai/: __init__.py  agent.py
backend/app/database/: client.py  models.py  operations.py
backend/app/routers/: ai.py  auth.py  sessions.py  users.py
backend/app/services/: gemini_client.py  job_questions_pipeline.py  pipeline.py  scraper.py  smolagents_pipeline.py  website_summary_pipeline.py
backend/app/utils/: auth.py  dependencies.py  prompt.py  questions.py
frontend/: eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(main)/: layout.tsx  nav-sign-in-button.tsx  navbar.tsx
frontend/src/app/(main)/auth/login/: page.tsx
frontend/src/app/(main)/auth/signup/: page.tsx
frontend/src/app/(main)/editor/: bread-crumbs.tsx  education-form.tsx  footer.tsx  page.tsx  print-resume-button.tsx  projects-form.tsx  research-form.tsx  resume-editor.tsx  resume-preview-section.tsx  skills-dialog.tsx  skills.tsx  steps.tsx
frontend/src/app/(main)/resumes/: ResumesList.tsx  page.tsx
frontend/src/components/: resume-preview.tsx  sign-in.tsx  sign-out.tsx
frontend/src/components/ui/: animated-hero.tsx  loading-button.tsx  theme-toggle.tsx
frontend/src/hooks/: useDebounce.ts  useDimensions.ts  usePremiumModal.ts  useUnloadWarning.ts
frontend/src/lib/: api.ts  transformers.ts  types.ts  validations.ts
(+19 files in other folders)
